
* Pace notes Widget, Track notes Widget
  - Fixed notes not showing up if game was paused and unpaused again while on track.

* Relative finish order Widget
  - Add "show_absolute_refilling" option.

* [New]Slip ratio Widget
  - Show visualized slip ratio of each tyre with customizable optimal and critical range and color indication.

* Virtual Energy Widget
  - Add "show_absolute_refilling", "caption_text_absolute_refill" options.
  - Exchanged column positions of "end" and "pits".

2.21.0 (2024-12-10)
-----------------------------
* General
  - More optimization to all widgets & modules for further improved efficiency and less resource usage.

* RestAPI Module
  - Updated steerlock function to retrieve steerlock value from new LMGT3 vehicles in LMU.

* Brake pressure, Ride height, Suspension position, Tyre load Widget
  - Add "show_caption", "font_scale_caption", "caption_text" options for displaying and customizing
    caption text (requested by coasting&cruising). This option is disabled by default.

* Relative Widget, Standings Widget
  - Add "show_highlighted_fastest_last_laptime" option (requested by Hany Alsabti), which highlights
    the fastest last lap time within the same class if available.
  - Improved consistency and accuracy of relative time interval (requested by Hany Alsabti).
  - Renamed "show_vehicle_in_garage_for_race" option to "show_vehicle_in_garage" in Relative Widget,
    which now affects all sessions. Default is "False", which hides vehicles in garage.
    Note, local player (user) is always displayed.

* Gear Widget
  - Add "show_inverted_battery" & "show_inverted_rpm" options that invert battery or rpm bar progression.

* [New]Steering wheel
  - Show virtual steering wheel with customizable steering wheel image.
  - Show steering rotation reference line, which can be useful to see if physical steering wheel is misaligned.
  - See User Guide for details.

* [New]Tyre inner layer Widget, Tyre temperature Widget