@@ -2008,7 +2008,6 @@ WIDGET_DEFAULT = {
         "enable_auto_font_offset": True,
         "font_offset_vertical": 0,
         "bar_padding": 0.5,
-        "font_color": "#000000",
         "display_detail_level": 1,
         "area_size": 400,
         "area_margin": 40,
@@ -2029,7 +2028,12 @@ WIDGET_DEFAULT = {
         "sector_line_width": 3,
         "sector_line_length": 7,
         "show_vehicle_standings": True,
+        "enable_multi_class_styling": True,
+        "font_color_player": "#FFFFFF",
         "vehicle_color_player": "#FF4422",
+        "vehicle_outline_player_color": "#AAFFFFFF",
+        "vehicle_outline_player_width": 2,
+        "font_color": "#000000",
         "vehicle_color_leader": "#88FF00",
         "vehicle_color_same_lap": "#FFFFFF",
         "vehicle_color_laps_ahead": "#FF44CC",
